--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
         margin: 30px;
       }
 
+      @media (max-device-width: 799px) {
+        p {
+          font-size: 20px;
+        }
+        h1 {
+          margin-top: 40px;
+          margin-bottom: 30px;
+          text-align: center;
+          font-Size: 40px;
+        }
+
+        #skillsPic {
+          width: 200px;
+          height: 100px;
+          margin: 20px;
+        }
+      }
+
     </style>
   </head>
   <body >
@@ -75,7 +93,7 @@
 
         <div id="education" class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
           <h1 style="text-align: left;"> Academics </h1>
-          <label id="schoolsAndDegrees" style="">
+          <label id="schoolsAndDegrees" >
             <span style="font-size: 24px;"> Schools and Degrees </span>
             <a style="float: right; background-color: rgb(41,41,41); border: none;"  onclick="toggleSchoolsandDegrees()">
               <span id="expansion" style="margin-top: 8px;" class="glyphicon glyphicon-menu-down"></span>
@@ -97,14 +115,14 @@
 
         <div id="skills" class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
           <h1 style="text-align: right;"> Skills and Technologies </h1>
-          <img src="web.png" id="skillsPic">
-          <img src="react.png" id="skillsPic">
-          <img src="node.png" id="skillsPic">
-          <img src="express.png" id="skillsPic"> <br>
-          <img src="linux.png" id="skillsPic">
-          <img src="cpp.png" id="skillsPic">
-          <img src="java.png" id="skillsPic">
-          <img src="mysql.png" >
+          <img src="images/web.png" id="skillsPic">
+          <img src="images/react.png" id="skillsPic">
+          <img src="images/node.png" id="skillsPic">
+          <img src="images/express.png" id="skillsPic"> <br>
+          <img src="images/linux.png" id="skillsPic">
+          <img src="images/cpp.png" id="skillsPic">
+          <img src="images/java.png" id="skillsPic">
+          <img src="images/mysql.png" >
         </div>
     </div>
     <script>
@@ -120,6 +138,8 @@
         {
           height = '150px';
           width = '700px';
+          if (document.documentElement.clientWidth < 600)
+            height = '250px';
           document.getElementById('expansion').className = 'glyphicon glyphicon-menu-left';
         }
         $('#schoolsAndDegrees').animate({
@@ -128,6 +148,8 @@
         });
         toggled = !toggled;
       }
+
+
     </script>
     <script type="text/babel">
       class NavLink extends React.Component {
@@ -139,6 +161,7 @@
             marginTop: '5px',
             borderRadius: '15px 15px 15px 15px',
             fontFamily: "'Abel', sans-serif",
+            textAlign: 'center',
           };
         }
         hoverIn(e) {
