--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/MuhammadBIlalQC/" class="link" id="GitHubLink" onclick="changeToNormalStyle('GitHubLink')" target="_blank"> GitHub </a></li>
-            <li><a href="https://github.com/MuhammadBIlalQC/" class="link" target="_blank"> LinkedIn </a></li>
-            <li><a href="#" class="link" data-toggle="modal" data-target=".bs-example-modal-lg" > Contact </a></li>
+            <li><a href="https://github.com/MuhammadBIlalQC/" class="link" id="LinkedInLink" onclick="changeToNormalStyle('LinkedInLink')" target="_blank"> LinkedIn </a></li>
+            <li><a href="#" class="link" data-toggle="modal" data-target=".bs-example-modal-lg"  id="ContactLink" onclick="changeToNormalStyle('ContactLink')"> Contact </a></li>
           </ul>
         </div>
       </div>
@@ -153,9 +153,10 @@
               Hello World!
             </h1>
             <p>
-              I immediately fell in love with programming after my first engineering 
-			  programming course. I ended up switching to Computer Science. Aside from 
-			  school, I self-learned a lot. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              I am a College Student who is pursing a Bachelours in Computer Science.
+			  Currently, I am a junior taking upper level computer science courses. I do not know 
+			  what to say so I am going to add filler text proceeding this sentence.
+			  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 			  Maecenas luctus placerat lorem, at ornare augue pretium nec. Nullam in urna non tellus 
 			  malesuada luctus a tempus mi. Nam nec lacinia quam, et volutpat libero. Sed viverra a e
 			  lit eu sagittis. Nulla nunc nunc, tempus eu faucibus quis, congue ac ante. Aliquam 
@@ -202,7 +203,7 @@
           <label data-toggle="collapse" data-target="#SocialHubExp" aria-expanded="true" onclick="toggleSwitch('SocialHub')" style="width: 300px;">SocialHub
             <span  id="SocialHub" style="margin-left: 50px; float: right;" class="glyphicon glyphicon-menu-down"></span> </labeL>
           <div id="SocialHubExp" class="collapse collapsed-para">
-              GitHub Link: <a href="https://github.com/MuhammadBIlalQC/ProjectZ" class="collapseLink">https://github.com/MuhammadBIlalQC/ProjectZ </a> <br> <br>
+              GitHub Link: <a href="https://github.com/MuhammadBIlalQC/ProjectZ" class="collapseLink" target="_blank" >https://github.com/MuhammadBIlalQC/ProjectZ </a> <br> <br>
               A facebook-inspired project I have been working on. The project uses Node.js & Expres.js for backend and React.js & Bootstrap for front-end. The purpose of
               building this site was to get my hands dirty on React and Node. I was learning and realized that I wanted to have some fun. So I thought of the hardest
               and most interesting idea I could build, and started coding. Although the website is not complete, it has a light login feature along with fully functional
