prevent text highlighting and make text-align justify

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     <!--- End of External Scripts and stylesheets --->
 
     <style>
+        * {
+            text-align: justify;
+            
+        }
+        
+        *:selection {
+            -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+        }
       h1 {
         margin-top: 80px;
         margin-bottom: 50px;
