--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <style>
 		body {	
         background-color: rgb(41,41,41);
-		
 	  }
       h1 {
         margin-top: 80px;
@@ -41,8 +40,6 @@
 	  
       #content {
         color: #ADE9FF;
-        padding: 0px;
-        padding: 0px 40px 80px 0px;
       }
 	  #heading {
 		text-align: center;
@@ -94,7 +91,7 @@
 
       @media (max-device-width: 799px) {
         p {
-          font-size: 16px;
+          font-size: 20px;
           margin-left: 20px;
         }
         h1 {
@@ -152,7 +149,7 @@
     </div>
     <div class="container" id="content" >
       <div class="row" >
-        <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div id="intro" style="margin-bottom: 80px; padding-top: 80px;">
             <h1>
               Hello World!
@@ -163,18 +160,13 @@
 			  what to say so I am going to add filler text proceeding this sentence.
 			  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 			  Maecenas luctus placerat lorem, at ornare augue pretium nec. Nullam in urna non tellus 
-			  malesuada luctus a tempus mi. Nam nec lacinia quam, et volutpat libero. Sed viverra a e
-			  lit eu sagittis. Nulla nunc nunc, tempus eu faucibus quis, congue ac ante. Aliquam 
-			  condimentum a eros vel condimentum. Curabitur ac malesuada augue. Morbi faucibus lacus 
-			  eget diam consequat, eu ultricies eros ultricies. Quisque efficitur porttitor est vel 
-			  efficitur. Praesent egestas ac odio eget dapibus. Nam semper eget leo ac ultrices. 
-			  Nam rutrum dolor nec augue suscipit varius.
+			  malesuada luctus a tempus mi. Nam nec lacinia quam.
 
 			</p>
           </div>
         </div>
 
-        <div id="education" class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
+        <div id="education" class="col-xs-12 col-md-8 col-md-offset-2">
           <h1  > Academics </h1>
           <label data-toggle="collapse" data-target="#schoolsAndDegrees" aria-expanded="false" onclick="toggleSwitch('expandSchoolGlyph')" >Schools and Degrees
             <span  id="expandSchoolGlyph" style="margin-left: 50px;" class="glyphicon glyphicon-menu-down"></span> </labeL>
@@ -188,10 +180,7 @@
 			  Maecenas luctus placerat lorem, at ornare augue pretium nec. Nullam in urna non tellus 
 			  malesuada luctus a tempus mi. Nam nec lacinia quam, et volutpat libero. Sed viverra a e
 			  lit eu sagittis. Nulla nunc nunc, tempus eu faucibus quis, congue ac ante. Aliquam 
-			  condimentum a eros vel condimentum. Curabitur ac malesuada augue. Morbi faucibus lacus 
-			  eget diam consequat, eu ultricies eros ultricies. Quisque efficitur porttitor est vel 
-			  efficitur. Praesent egestas ac odio eget dapibus. Nam semper eget leo ac ultrices. 
-			  Nam rutrum dolor nec augue suscipit varius.
+			  condimentum a eros vel condimentum. Curabitur ac malesuada augue.
           </p>
         </div>
         <div id="projects" class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
